k8s/overlays/local/jaeger/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: jaeger-vs
  namespace: istio-system
spec:
  hosts:
  - jaeger.local.solidity-security.dev
  gateways:
  - istio-system/solidity-security-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: tracing.istio-system.svc.cluster.local
        port:
          number: 80
